feat: add RWD styles to app

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Lato:400,700|Varela+Round&display=swap");
 
+$font-color: #cecece;
+$font-color-disabled: #9d9d9d;
 $background-color: #38108d;
 $container-color: #4b14b8;
 $container-color-dark: #1f094d;
@@ -8,12 +10,8 @@ $main-color: #28066b;
 $main-color-light: #eade09;
 $main-color-dark: #fccaab;
 $main-font: "Lato", sans-serif;
-$font-color: #cecece;
-$font-color-disabled: #9d9d9d;
 $secondary-font: "Varela Round", sans-serif;
-$correct-color-light: #adf724;
 $correct-color: #23d70b;
-$correct-color-dark: #3aae09;
 $wrong-color: #f9180d;
 
 * {
@@ -38,23 +36,19 @@ body {
     font-size: 18px;
     color: $font-color;
 }
-
 a {
     color: #333333;
     text-decoration: none;
 }
-
 .btn {
-    font-size: 1.1rem;
-    padding: 6px;
-    background-color: $answer-color;
-    border: 2px solid $main-color-light;
-    transition: all 0.3s ease-in-out;
-    color: $font-color;
-    border-radius: 10px;
-    font-family: $secondary-font;
     margin-top: 30px;
     padding: 15px;
+    color: $font-color;
+    font-size: 1.1rem;
+    font-family: $secondary-font;
+    background-color: $answer-color;
+    border: 2px solid $main-color-light;
+    border-radius: 10px;
     cursor: pointer;
     transition: background-color 0.3s ease-in-out, transform 0.3s ease-in-out,
         color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
@@ -67,14 +61,13 @@ a {
     }
 }
 .btn-disabled {
+    color: $font-color-disabled;
     background-color: $container-color-dark;
     border: 2px solid $font-color;
     cursor: initial;
-    pointer-events: none;
     box-shadow: none;
-    color: $font-color-disabled;
+    pointer-events: none;
 }
-
 .h1 {
     font-size: 2rem;
 }
@@ -94,7 +87,6 @@ a {
     background-color: $background-color;
     background-image: url("data:image/svg+xml,%3Csvg width='42' height='44' viewBox='0 0 42 44' xmlns='http://www.w3.org/2000/svg'%3E%3Cg id='Page-1' fill='none' fill-rule='evenodd'%3E%3Cg id='brick-wall' fill='%23fffeff' fill-opacity='0.31'%3E%3Cpath d='M0 0h42v44H0V0zm1 1h40v20H1V1zM0 23h20v20H0V23zm22 0h20v20H22V23z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
 }
-
 .main-panel {
     display: flex;
     flex-flow: column;
@@ -102,19 +94,16 @@ a {
     align-items: center;
     width: 650px;
     height: 550px;
-    border: 6px solid $main-color;
-    // border-radius: 15px;
-    text-align: center;
     padding: 20px 30px;
-    // background-color: $container-color;
     background: radial-gradient(rgb(106, 65, 185), rgb(48, 13, 119));
+    border: 6px solid $main-color;
+    text-align: center;
 }
 .btn-start {
     margin-top: 30px;
 }
-
 .categories-label {
-    margin: 20px 0 0;
+    margin: 20px 0 10px;
 }
 .categories {
     font-size: 1.2rem;
@@ -124,15 +113,10 @@ a {
     flex-flow: column;
     select {
         border: none;
-        border: 2px solid $main-color-dark;
+        background: $answer-color;
+        color: $font-color;
+        border: 2px solid $main-color-light;
     }
-}
-
-.control-buttons {
-    align-self: stretch;
-    margin-top: 20px;
-    display: flex;
-    align-items: center;
 }
 
 .btn-next-question,
@@ -157,15 +141,14 @@ a {
 
 .quiz-panel {
     position: relative;
-    background-color: $container-color;
 }
 .loader-icon {
+    position: absolute;
     width: 100px;
     height: 100px;
     border-radius: 50%;
     border: 10px solid $main-color;
     border-top: 10px solid $main-color-dark;
-    position: absolute;
     animation: loading 2s linear infinite;
 }
 
@@ -173,45 +156,39 @@ a {
     QUESTION PANEL
 ----------------------------------------------------- */
 .question-panel {
-    // border: 2px solid red;
-    flex: 0 1 60%;
     display: flex;
     flex-flow: column;
     align-self: stretch;
+    flex: 0 1 60%;
 }
 .quiz-information {
-    // border: 2px solid green;
     display: flex;
     align-items: center;
-    // margin-bottom: 10px;
+    // justify-content: space-between;
     margin: 5px 0 15px;
     font-size: 1.2rem;
     .prompt {
         flex: 1;
     }
-    p {
-        // border: 2px solid red;
-        flex: 2;
-    }
 }
 .btn-prompt {
-    padding: 6px;
     margin-top: 0;
+    padding: 6px;
 }
 
 .question-counter {
+    // border: 2px solid red;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 10px;
-    user-select: none;
     height: 30px;
     width: 30px;
-    // background-color: $main-color;
+    padding: 10px;
+    font-size: 1.2rem;
     background: radial-gradient(rgb(89, 46, 176), rgb(43, 10, 109));
     box-shadow: -1px -1px 5px 3px $main-color-light,
         1px 1px 5px 3px $main-color-light;
-    font-size: 1.2rem;
+    user-select: none;
     transform: rotate(45deg);
     span {
         display: block;
@@ -221,15 +198,14 @@ a {
 .question-container {
     flex: 1;
     display: flex;
-    align-items: center;
 }
 
 .question-heading {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100%;
-    width: 100%;
+    height: calc(100% - 15px);
+    flex: 1 1 auto;
     margin: 15px auto auto;
     padding: 0 15px;
     background: radial-gradient(rgb(89, 46, 176), rgb(43, 10, 109));
@@ -237,8 +213,10 @@ a {
     font-size: 2rem;
 }
 .warning {
-    color: #fd1313;
+    margin-top: 5px;
     font-size: 1.3rem;
+    color: #ff3535;
+    text-shadow: 2px 2px 2px $container-color-dark;
     visibility: hidden;
 }
 .error {
@@ -253,11 +231,10 @@ a {
     ANSWERS PANEL
 ----------------------------------------------------- */
 .answers-panel {
-    // border: 2px solid blue;
-    flex: 1 0 auto;
     display: flex;
     flex-flow: row wrap;
     align-self: stretch;
+    flex: 1 0 auto;
     :first-child {
         margin: 5px 5px 5px 0;
     }
@@ -272,38 +249,37 @@ a {
     }
 }
 .answer {
-    flex: 1 1 45%;
-    font-size: 1.3rem;
-    font-family: $secondary-font;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: $answer-color;
+    padding: 5px;
+    font-size: 1.15rem;
+    font-family: $secondary-font;
+    background: $answer-color;
     border: 2px solid $main-color-dark;
+    flex: 1 1 45%;
     cursor: pointer;
 }
 .answer-hover {
     transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out,
         border 0.3s ease-in-out;
     &:hover {
-        background-color: $main-color-light;
         color: #000000;
+        background: $main-color-light;
         border: 2px solid #000000;
     }
 }
-.correct {
-    background-color: $correct-color;
+.correct,
+.wrong {
     color: #000000;
     border: 2px solid #000000;
+}
+.correct {
+    background-color: $correct-color;
 }
 .wrong {
     background-color: $wrong-color;
-    color: #000000;
-    border: 2px solid #000000;
 }
-/* ---------------------------------------------------
-    STATISTICS
------------------------------------------------------ */
 
 /* ---------------------------------------------------
     ANIMATIONS
@@ -335,5 +311,42 @@ a {
     40%,
     60% {
         transform: translate3d(10px, 0, 0);
+    }
+}
+
+/* ---------------------------------------------------
+    RWD
+----------------------------------------------------- */
+
+@media (min-width: 320px) and (max-width: 620px) {
+    html {
+        font-size: 14px;
+    }
+    .main-panel {
+        width: 80%;
+        height: 50%;
+        margin: 0 20px;
+    }
+    .quiz-panel {
+        margin: 20px 0;
+        height: 600px;
+        align-self: stretch;
+    }
+    .quiz-information {
+        justify-content: space-between;
+        .prompt {
+            flex: 0;
+        }
+    }
+    .warning {
+        margin-top: 10px 0;
+    }
+    .answers-panel {
+        display: flex;
+        flex-flow: column nowrap;
+        user-select: none;
+        .answer {
+            margin: 5px 0;
+        }
     }
 }
