--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -30,17 +30,14 @@ a {
 }
 
 .btn {
-  font-size: 1.1rem;
-  padding: 6px;
-  background-color: #300d77;
-  border: 2px solid #eade09;
-  -webkit-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
-  color: #cecece;
-  border-radius: 10px;
-  font-family: "Varela Round", sans-serif;
   margin-top: 30px;
   padding: 15px;
+  color: #cecece;
+  font-size: 1.1rem;
+  font-family: "Varela Round", sans-serif;
+  background-color: #300d77;
+  border: 2px solid #eade09;
+  border-radius: 10px;
   cursor: pointer;
   -webkit-transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out, -webkit-box-shadow 0.3s ease-in-out;
   transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out, -webkit-box-shadow 0.3s ease-in-out;
@@ -58,13 +55,13 @@ a {
 }
 
 .btn-disabled {
+  color: #9d9d9d;
   background-color: #1f094d;
   border: 2px solid #cecece;
   cursor: initial;
-  pointer-events: none;
   -webkit-box-shadow: none;
           box-shadow: none;
-  color: #9d9d9d;
+  pointer-events: none;
 }
 
 .h1 {
@@ -109,10 +106,10 @@ a {
           align-items: center;
   width: 650px;
   height: 550px;
-  border: 6px solid #28066b;
-  text-align: center;
   padding: 20px 30px;
   background: radial-gradient(#6a41b9, #300d77);
+  border: 6px solid #28066b;
+  text-align: center;
 }
 
 .btn-start {
@@ -120,7 +117,7 @@ a {
 }
 
 .categories-label {
-  margin: 20px 0 0;
+  margin: 20px 0 10px;
 }
 
 .categories {
@@ -138,19 +135,9 @@ a {
 
 .categories select {
   border: none;
-  border: 2px solid #fccaab;
-}
-
-.control-buttons {
-  -ms-flex-item-align: stretch;
-      align-self: stretch;
-  margin-top: 20px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  background: #300d77;
+  color: #cecece;
+  border: 2px solid #eade09;
 }
 
 .btn-next-question,
@@ -178,16 +165,15 @@ a {
 ----------------------------------------------------- */
 .quiz-panel {
   position: relative;
-  background-color: #4b14b8;
 }
 
 .loader-icon {
+  position: absolute;
   width: 100px;
   height: 100px;
   border-radius: 50%;
   border: 10px solid #28066b;
   border-top: 10px solid #fccaab;
-  position: absolute;
   -webkit-animation: loading 2s linear infinite;
           animation: loading 2s linear infinite;
 }
@@ -196,9 +182,6 @@ a {
     QUESTION PANEL
 ----------------------------------------------------- */
 .question-panel {
-  -webkit-box-flex: 0;
-      -ms-flex: 0 1 60%;
-          flex: 0 1 60%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -208,6 +191,9 @@ a {
           flex-flow: column;
   -ms-flex-item-align: stretch;
       align-self: stretch;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 60%;
+          flex: 0 1 60%;
 }
 
 .quiz-information {
@@ -227,15 +213,9 @@ a {
           flex: 1;
 }
 
-.quiz-information p {
-  -webkit-box-flex: 2;
-      -ms-flex: 2;
-          flex: 2;
-}
-
 .btn-prompt {
-  padding: 6px;
   margin-top: 0;
+  padding: 6px;
 }
 
 .question-counter {
@@ -248,17 +228,17 @@ a {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  height: 30px;
+  width: 30px;
   padding: 10px;
+  font-size: 1.2rem;
+  background: radial-gradient(#592eb0, #2b0a6d);
+  -webkit-box-shadow: -1px -1px 5px 3px #eade09, 1px 1px 5px 3px #eade09;
+          box-shadow: -1px -1px 5px 3px #eade09, 1px 1px 5px 3px #eade09;
   -webkit-user-select: none;
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
-  height: 30px;
-  width: 30px;
-  background: radial-gradient(#592eb0, #2b0a6d);
-  -webkit-box-shadow: -1px -1px 5px 3px #eade09, 1px 1px 5px 3px #eade09;
-          box-shadow: -1px -1px 5px 3px #eade09, 1px 1px 5px 3px #eade09;
-  font-size: 1.2rem;
   -webkit-transform: rotate(45deg);
           transform: rotate(45deg);
 }
@@ -276,9 +256,6 @@ a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
 }
 
 .question-heading {
@@ -291,8 +268,10 @@ a {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  height: 100%;
-  width: 100%;
+  height: calc(100% - 15px);
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
   margin: 15px auto auto;
   padding: 0 15px;
   background: radial-gradient(#592eb0, #2b0a6d);
@@ -301,8 +280,10 @@ a {
 }
 
 .warning {
-  color: #fd1313;
+  margin-top: 5px;
   font-size: 1.3rem;
+  color: #ff3535;
+  text-shadow: 2px 2px 2px #1f094d;
   visibility: hidden;
 }
 
@@ -322,9 +303,6 @@ a {
     ANSWERS PANEL
 ----------------------------------------------------- */
 .answers-panel {
-  -webkit-box-flex: 1;
-      -ms-flex: 1 0 auto;
-          flex: 1 0 auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -334,6 +312,9 @@ a {
           flex-flow: row wrap;
   -ms-flex-item-align: stretch;
       align-self: stretch;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 auto;
+          flex: 1 0 auto;
 }
 
 .answers-panel :first-child {
@@ -353,11 +334,6 @@ a {
 }
 
 .answer {
-  -webkit-box-flex: 1;
-      -ms-flex: 1 1 45%;
-          flex: 1 1 45%;
-  font-size: 1.3rem;
-  font-family: "Varela Round", sans-serif;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -367,8 +343,14 @@ a {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background-color: #300d77;
+  padding: 5px;
+  font-size: 1.15rem;
+  font-family: "Varela Round", sans-serif;
+  background: #300d77;
   border: 2px solid #fccaab;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 45%;
+          flex: 1 1 45%;
   cursor: pointer;
 }
 
@@ -378,26 +360,25 @@ a {
 }
 
 .answer-hover:hover {
-  background-color: #eade09;
+  color: #000000;
+  background: #eade09;
+  border: 2px solid #000000;
+}
+
+.correct,
+.wrong {
   color: #000000;
   border: 2px solid #000000;
 }
 
 .correct {
   background-color: #23d70b;
-  color: #000000;
-  border: 2px solid #000000;
 }
 
 .wrong {
   background-color: #f9180d;
-  color: #000000;
-  border: 2px solid #000000;
 }
 
-/* ---------------------------------------------------
-    STATISTICS
------------------------------------------------------ */
 /* ---------------------------------------------------
     ANIMATIONS
 ----------------------------------------------------- */
@@ -467,6 +448,56 @@ a {
   60% {
     -webkit-transform: translate3d(10px, 0, 0);
             transform: translate3d(10px, 0, 0);
+  }
+}
+
+/* ---------------------------------------------------
+    RWD
+----------------------------------------------------- */
+@media (min-width: 320px) and (max-width: 620px) {
+  html {
+    font-size: 14px;
+  }
+  .main-panel {
+    width: 80%;
+    height: 50%;
+    margin: 0 20px;
+  }
+  .quiz-panel {
+    margin: 20px 0;
+    height: 600px;
+    -ms-flex-item-align: stretch;
+        -ms-grid-row-align: stretch;
+        align-self: stretch;
+  }
+  .quiz-information {
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .quiz-information .prompt {
+    -webkit-box-flex: 0;
+        -ms-flex: 0;
+            flex: 0;
+  }
+  .warning {
+    margin-top: 10px 0;
+  }
+  .answers-panel {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: column nowrap;
+            flex-flow: column nowrap;
+    -webkit-user-select: none;
+       -moz-user-select: none;
+        -ms-user-select: none;
+            user-select: none;
+  }
+  .answers-panel .answer {
+    margin: 5px 0;
   }
 }
 /*# sourceMappingURL=App.css.map */
