refactor: change file structure, merged two buttons components into HintButton, correct statistics page styles

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -64,10 +64,6 @@ a {
   pointer-events: none;
 }
 
-.h1 {
-  font-size: 2rem;
-}
-
 .big {
   font-size: 5rem;
 }
@@ -377,6 +373,13 @@ a {
 
 .wrong {
   background-color: #f9180d;
+}
+
+/* ---------------------------------------------------
+    STATISTICS
+----------------------------------------------------- */
+.statistics-panel h1 {
+  font-size: 3rem;
 }
 
 /* ---------------------------------------------------
