--- a/src/components/Answers/_answers.scss
+++ b/src/components/Answers/_answers.scss
@@ -16,6 +16,7 @@
         margin: 5px 0 0 5px;
     }
     @include breakpoint(md) {
+        flex: 0 0 auto;
         display: flex;
         flex-flow: column nowrap;
         user-select: none;
@@ -28,13 +29,17 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 5px;
+    padding: 10px;
     font-size: 1.15rem;
     font-family: $secondary-font;
     background: $answer-color;
     border: 2px solid $main-color-dark;
     flex: 1 1 45%;
     cursor: pointer;
+    @include breakpoint(md) {
+        flex: 0 0 auto;
+        padding: 5px;
+    }
 }
 .answer-hover {
     transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out,
