--- a/src/pages/main/_mainPanel.scss
+++ b/src/pages/main/_mainPanel.scss
@@ -4,7 +4,11 @@
     align-items: center;
     min-height: 100vh;
     background-color: $background-color;
+    overflow: hidden;
     background-image: url("data:image/svg+xml,%3Csvg width='42' height='44' viewBox='0 0 42 44' xmlns='http://www.w3.org/2000/svg'%3E%3Cg id='Page-1' fill='none' fill-rule='evenodd'%3E%3Cg id='brick-wall' fill='%23fffeff' fill-opacity='0.31'%3E%3Cpath d='M0 0h42v44H0V0zm1 1h40v20H1V1zM0 23h20v20H0V23zm22 0h20v20H22V23z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+    @include breakpoint(md) {
+        flex-flow: column;
+    }
 }
 .main-panel {
     display: flex;
@@ -12,15 +16,22 @@
     justify-content: center;
     align-items: center;
     width: 650px;
-    height: 550px;
+    min-height: 550px;
     padding: 20px 30px;
     background: radial-gradient(rgb(106, 65, 185), rgb(48, 13, 119));
     border: 6px solid $main-color;
     text-align: center;
+
     @include breakpoint(md) {
-        width: 80%;
-        height: 50%;
-        margin: 0 20px;
+        min-width: 300px;
+        width: auto;
+    }
+
+    @include breakpoint(xs) {
+        width: auto;
+        min-width: 240px;
+        min-height: 440px;
+        margin: 0 15px;
     }
 }
 .btn-start {
